#Implementação - Fase 0: Definindo correlation id e o logging estruturado para Observalidade.
